--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,24 @@
-flask==2.1.0
-pyjwt==2.0.0
-gunicorn== 19.9.0
-datetime
-uuid
-Flask-SQLAlchemy
-flask-cors
-gunicorn
-psycopg2-binary
+alembic==1.7.7
+click==8.1.3
+DateTime==4.4
+Flask==2.1.0
+Flask-Cors==3.0.10
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+gunicorn==19.9.0
+importlib-metadata==4.11.3
+importlib-resources==5.7.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.0
+MarkupSafe==2.1.1
+psycopg2-binary==2.9.3
+PyJWT==2.0.0
+pytz==2022.1
+six==1.16.0
+SQLAlchemy==1.4.36
+uuid==1.30
+Werkzeug==2.1.2
+zipp==3.8.0
+zope.interface==5.4.0
